update content after first reading

--- a/2023w24-apple-wwdc-2023.md
+++ b/2023w24-apple-wwdc-2023.md
@@ -14,38 +14,35 @@ image: "https://circle-picgo.oss-cn-shanghai.aliyuncs.com/img/CleanShot%202023-0
 
 ### Apple WWDC 2023 
 
-2023.06.06，苹果开始了 WWDC 2023 全球开发者大会，大会带来了新的 15 寸 MacBook Air，介绍了新版系统的各种变化和特性。与往年不同的是，今年最后还有 One more thing, Apple Vision Pro，搭配了全新的 visionOS 操作系统。
+2023.06.06 苹果开始了 WWDC 2023 全球开发者大会，大会带来了新的 15 寸 MacBook Air，介绍了新版系统的各种变化和特性。与往年不同的是，今年最后还有 One more thing, Apple Vision Pro，搭配了全新的 visionOS 操作系统。
 
 MacBook Air 有了 15 寸，满足了轻薄的同时还想要大屏幕的那部分用户。MacBook Air 也从最早在油纸信封中抽出来的轻薄发生了变化，屏幕大小不再是区分 MacBook Air 和 MacBook Pro 的标准。在我看来，如果是轻度文字工作者，想要续航就选 MacBook Air；如果是专业电脑工作者，想要性能就选 MacBook Pro。
 
-WWDC 30 分钟开始介绍了 iOS 17 的新体验，新的原生应用 Journal，a new way to reflect on and relive special moments。Photos 中现有的 For You: Memories 可以帮我总结一些回忆，Journal 想要做的更多，不只是总结和回看这些瞬间，还想要我们写下来，记录这些体验。
+WWDC 30 分钟开始介绍了 iOS 17 的新体验，新的原生应用 Journal，a new way to reflect on and relive special moments。Photos 中现有的 For You: Memories 可以帮我们总结回忆，Journal 想要做的更多，想要我们写下来，记录这些瞬间和体验。
 
-Journal 很容易让人想起 Day One，通过时间线记录一天的生活。Journal 有 Time to write 提醒，提醒用户开始记录。记录的时候，会通过 Suggestions  API 提示用户这一天发生了什么，比如拍的照片，去的地方，听的播客，体能训练等。
+Journal 很容易让人想起 Day One，通过时间线记录一天的生活。Journal 有 Time to write 提醒，提醒用户开始记录。记录的时候，会通过 Suggestions  API 提示用户这一天发生了什么，比如拍的照片，去的地方，听的播客，体能训练等，所有这些甚至能记录到一条笔记中。
 
 ![Journal in iOS17](https://circle-picgo.oss-cn-shanghai.aliyuncs.com/img/CleanShot%202023-06-11%20at%2016.39.15@2x.png)
 
-
-在做集合模块的过程中，我有一个类似的想法，通过系统应用可以展示用户的时间线，停留在想法层面还没有开始，这次 WWDC 的 Journal 让我有点兴奋，似乎找到了一些我这个想法的影子。
+在做集合模块的过程中，我也有一个类似的想法，通过系统应用可以展示用户的时间线，现在也只是停留在想法层面。这次 WWDC 的 Journal 让我有点兴奋，似乎找到了一些我这个想法的影子。
 
 ![My Journal Idea with iPhone](https://circle-picgo.oss-cn-shanghai.aliyuncs.com/img/CleanShot%202023-06-11%20at%2016.08.40@2x.png)
 
-使用苹果设备和生态越久，越会发现系统原生应用的各种好，用日历安排日程，照片记录生活，备忘录做笔记，给生活设置提醒等，这些服务就组成了我们每个人的生活。
-
-如果我们经常使用日历，那么通过日历可以知道我们的时间都去哪了；如果拍照的时候打开定位，那么照片就可以知道我们去过哪儿；如果我们按照时间在备忘录记录一天的所思所想所做，就知道我们那一天有什么想法，发生了哪些有趣的事情；如果你还有 Apple Watch， 那么还可以看到体能训练，睡眠分析，所有这些组成了我们真实的生活。
+使用苹果设备和生态越久，越会发现系统原生应用的各种好，用日历安排日程，照片记录生活，备忘录做笔记，给生活设置提醒。如果我们经常使用日历，那么通过日历可以知道我们的时间都去哪了；如果拍照的时候打开定位，那么照片就可以知道我们去过哪儿；如果我们按照时间在备忘录记录一天的所思所想所做，就知道我们那一天有什么想法，发生了哪些有趣的事情；如果你还有 Apple Watch， 那么还可以看到体能训练，睡眠分析，所有这些组成了我们真实的生活。
 
 这次的集合模块主要功能已经做的差不多了，也到了开始我自己新的 Journal 的时候了。
 
 ### 集合模块的方案纠结
 
-在集合应用中，集合模块用于记录，记录生活的点滴，开心的，难忘的，伤心的事，通过时间线留下现在美好的瞬间。集合应用的 sologan 是「没有记录就没有发生，没有量化则无法优化」。集合就是记录，已有的统计则是量化。
+在集合应用中，集合模块用于记录，记录生活的点滴，开心的，难忘的，伤心的事，通过时间线留下现在美好的瞬间。集合应用的 sologan 是「没有记录就没有发生，没有量化则无法优化」。集合模块就是记录，已有的统计模块则是量化。
 
-考虑到 UI 的灵活性，想到用 H5 页面来实现，这样可以动态更新快速迭代。奈何我是客户端开发工程师出身，经验上肯定是端上开发经验多一点，开发 H5 遇到不顺就会想到用 Native 方案。开发过程中我就想犯了毛病一样，不断的纠结和切换方案。其实这应该是开发前就要定好的，而我在开发过程中则还在不断想这个问题，浪费时间去尝试。
+考虑到 UI 的灵活性，想到用 H5 页面来实现，这样可以动态更新快速迭代。奈何我客户端开发工程师出身，经验上肯定是端上开发多一点，开发 H5 遇到不顺就会想到用 Native 方案。开发过程中我就想犯了毛病一样，不断的纠结和切换方案。这本应该是开发前就要定好的，我就是在开发过程中不断地反复，浪费了不少时间。
 
-整个集合的记录是存储在 CloudKit 中的，涉及到图片的方案则在不断变化。一开始使用 PHAsset 显示图片，但是照片中删除后就无法显示了，于是改为缓存到 App Document 目录；但卸载 App 后这些缓存的照片文件也就删除了，重新安装后照片还是无法显示；又将图片通过 CKAsset 存储到 CloudKit 中，带来新的问题是占用用户 iCloud 空间。图片相比文字来说占用的空间要大的多，记录多了很快就会到 5GB 容量的限制，看来最佳方案要么是 iCloud 增加容量，要么就是图片上传到后端 OSS 使用网络图片。
+整个集合的记录是存储在 CloudKit 可以多设备同步，涉及到图片的方案则在不断变化。一开始使用 PHAsset 显示图片，但是照片中删除后就无法显示了，于是改为缓存到 App Document 目录；但卸载 App 后这些缓存的照片文件也就删除了，重新安装后也就无法显示；又将图片通过 CKAsset 存储到 CloudKit 中，带来新的问题是会占用 iCloud 空间。图片相比文字来说占用的空间也要大的多，记录多了很快会到 5GB 容量的限制。看来最佳方案要么是 iCloud 增加容量，要么就是图片上传到后端 OSS 使用网络图片。
 
-相对于前几周，这周在开发上的时间投入明显多了一些。一开始用 CKQuery 一次性得到所有数据，前端开发了集合页面，于是想到前端页面做图片懒加载来避免占用过多内存，图片懒加载带来显示会有问题；后来迁移到 CKQueryOperation 限制记录返回数量，实现分页加载，分页之后懒加载的优势不再明显，索性就先不用了。使用 CloudKit 仍然有一个问题，就是无法查询记录的数量，目前能想到的方案是自己维护数量信息，和记录的增删改查操作同步，这个暂时留到后面再来做。
+相对于前几周，这周在开发上的时间投入明显多了些。开始用 CKQuery 一次性得到所有数据，前端页面用来展示和交互，数量多想到前端页面做图片懒加载来避免占用过多内存，图片懒加载带来了显示问题；后来迁移到 CKQueryOperation 限制记录返回数量分页加载，分页之后懒加载的优势不再明显，索性就先放弃了。使用 CloudKit 仍然有一个问题，就是无法查询记录的总数或者匹配条件的结果数量，目前能想到的方案是自己维护数量信息，和记录的增删改查操作同步，这个暂时留到后面再来做。
 
-为了提高页面体验，WKWebView 实现了端上离线包逻辑来提高打开速度，将前端资源打包预置到App 中，也可以在有更新的时候提前下载到 App 上。这样，无论是新用户体验，还是新功能集合，新版本都有了一些变化，就看看接下来会发生什么。
+为了提高页面体验，WKWebView 实现了端上离线包逻辑来提高打开速度，将前端资源预置到 App 中，在有更新的时候也可以提前下载到 App 上。这样，无论是新用户体验，还是新功能集合，新版本都有了一些变化，就看看接下来会发生什么。
 
 ### 区域牌照换成了浙 A
 
